new component file added with routing

--- a/src/components/innerModule/inner/innerComponents/home/newproposal/newproposal.component.html
+++ b/src/components/innerModule/inner/innerComponents/home/newproposal/newproposal.component.html
@@ -4,5 +4,6 @@
 <hr>
 <div class="text-center">
  
-  <a class="small" [routerLink]="['../create']">Back</a>
+  <a class="small" [routerLink]="['../create']">Back</a> <a class="small" [routerLink]="['/dashboard/view']">Next</a>
+  
 </div>
