--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -1,10 +1,18 @@
 <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="email"  [(ngModel)]="productData.email" name="email" placeholder="Enter Email Address...">
+ 
+ 
+    <input type="password"  [(ngModel)]="productData.password" name="password" placeholder="Password">
+
+ 
 
     <button type="submit" [routerLink]="['/dashboard/create']" >Login</button>
+
+    <a class="btn btn-primary btn-user btn-block" (click)="loginVisitor()">
+      Login
+    </a>
   
+    <button (click)="socialSignIn('google')">Sign in with Google</button>  
+    
   </div>
