--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -16,3 +16,11 @@
     <button (click)="socialSignIn('google')">Sign in with Google</button>  
     
   </div>
+
+  <ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="line-scale"
+>
+  <p style="font-size: 20px; color: white">Loading...</p></ngx-spinner>
