--- a/src/Modules/login/login.component.html
+++ b/src/Modules/login/login.component.html
@@ -4,7 +4,7 @@
   <div id="login-container">
     <h1 id="login-title">{{title}}</h1>
     <img id="googleLogo" src="/assets/google-logo.png" alt="google icon">
-    <app-button btnInfo="Login with Google" [routerLink]="['/dashboard/create']"></app-button>
+    <app-button btnInfo="Login with Google" name="globalBtn" [routerLink]="['/dashboard/create']"></app-button>
   </div>
 </div>
 
