--- a/src/Modules/innerModule/inner/innerComponents/header/header.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/header/header.component.html
@@ -3,11 +3,16 @@
 <div class="header-wrapper">
     <div id="NameBackdrop"><h2>RS</h2></div>
     <h4>Ram Sri</h4>
+  
 </div>
+<ejs-calendar></ejs-calendar>
 <div id="dateTime"> 
    {{dateTime | date: 'LLL'}}<br>
    {{dateTime | date: 'd'}}
+   
 </div>
+
+
 
     <!-- <button style="color: white;" type="submit" [routerLink]="['']" >Logout</button> -->
 </header>
