--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
@@ -1,14 +1,22 @@
+<!-- List view iteration -->
 
-<h1 id="noProposal">No Leads Created</h1>
+  <ul *ngFor="let leads of createLeads"> 
+    <li class="ClientName">{{leads.mName}} <app-list-btn (click)="callNewModal()"></app-list-btn></li>
+  </ul>
 
 
+
+
+
+
+<!-- Universal Button -->
 <div id="btnAlign">
 <app-button id="createBtn" btnInfo="Create" name="btnDark" data-toggle="modal" data-target="#myModal"></app-button>
-<!-- [routerLink]="['../new']" -->
 </div>
 
 
 <div class="container"> 
+
         <!-- Modal -->
         <div class="modal fade" id="myModal" role="dialog">
           <div class="modal-dialog">
@@ -21,13 +29,13 @@
               </div>
               <div class="modal-body inputStyle">
                   <label for="name">Name:</label>
-                <input class="modalInput" type="text" placeholder="name" name="name" >
+                <input class="modalInput" type="text"  #nameValue >
                 <label for="email">Email:</label>
-                <input class="modalInput" type="email" placeholder="example@breezemaxweb.com" name="email">
+                <input class="modalInput" type="email"  #emailValue>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Submit</button>
+                <button type="submit" class="btn btn-default" data-dismiss="modal" (click)="leadInformation(nameValue.value, emailValue.value)">Submit</button>
               </div>
             </div>
             
