--- a/src/Modules/login/login.component.html
+++ b/src/Modules/login/login.component.html
@@ -26,6 +26,5 @@
   bdColor="rgba(51,51,51,0.8)"
   size="medium"
   color="#fff"
-  type="line-scale"
->
+  type="line-scale">
   <p style="font-size: 20px; color: white">Loading...</p></ngx-spinner>
