--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,8 @@ body{
     overflow: hidden;
     font-family: 'Poppins', sans-serif;
 }
+ul{ 
+    list-style-type: none !important;
+    margin-top: 10px !important;
+    padding-right: 40px;
+}
