--- a/src/Modules/innerModule/inner/innerComponents/header/header.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/header/header.component.html
@@ -5,7 +5,7 @@
     <h4>Ram Sri</h4>
   
 </div>
-<ejs-calendar></ejs-calendar>
+<!-- <ejs-calendar></ejs-calendar> -->
 <div id="dateTime"> 
    {{dateTime | date: 'LLL'}}<br>
    {{dateTime | date: 'd'}}
