--- a/src/Modules/innerModule/inner/innerComponents/header/header.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/header/header.component.scss
@@ -1,9 +1,11 @@
 $accentColor: #FC4F44;
-
+header{ 
+    height: 50vh;
+}
 .mHeader{
     background: #212440;
-    border-radius: 0px 0px 40px 40px;
-    height: 50vh;
+    border-radius: 0px 0px 50px 50px;
+    height: 47vh;
     width: 100vw;
     margin: 0;
     padding: 0;
