--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
@@ -40,3 +40,14 @@ label{
         right: 40px;
     }
 }
+.list-group{
+    max-height: 230px;
+    margin-bottom: 10px;
+    overflow:scroll;
+    -webkit-overflow-scrolling: touch;
+}
+.list-group-item{
+    border: none;
+    border-bottom: 1px solid #ddd;
+ 
+}
