--- a/src/Modules/innerModule/inner/innerComponents/header/header.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/header/header.component.html
@@ -1,15 +1,18 @@
-<header class="mHeader">
+<header>
+<div class="mHeader">
+        <div class="header-wrapper">
+                <div id="NameBackdrop"><h4>RS</h4></div>
+                <h4>Ram Sri</h4>
+              
+            </div>
+            <!-- <ejs-calendar></ejs-calendar> -->
+            <div id="dateTime"> 
+               {{dateTime | date: 'LLL'}}<br>
+               {{dateTime | date: 'd'}}
+               
+            </div>
+            
 
-<div class="header-wrapper">
-    <div id="NameBackdrop"><h4>RS</h4></div>
-    <h4>Ram Sri</h4>
-  
-</div>
-<!-- <ejs-calendar></ejs-calendar> -->
-<div id="dateTime"> 
-   {{dateTime | date: 'LLL'}}<br>
-   {{dateTime | date: 'd'}}
-   
 </div>
 
 
