--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
@@ -51,3 +51,16 @@ label{
     border-bottom: 1px solid #ddd;
  
 }
+#lead-dialog{ 
+    width: 171px;
+    position: absolute;
+    right: 10px;
+}
+#leadModal{
+width: 100vw;
+}
+.mContain{ 
+    display: flex;
+    width: 100vw;
+
+}
