--- a/src/Modules/innerModule/inner/innerComponents/header/header.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/header/header.component.html
@@ -13,7 +13,7 @@
             </div>
             
 
-
+</div>
 
 
     <!-- <button style="color: white;" type="submit" [routerLink]="['']" >Logout</button> -->
