--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,14 @@ ul{
     margin-top: 10px !important;
     padding-right: 40px;
 }
+.list-group{
+    max-height: 230px;
+    margin-bottom: 10px;
+    overflow:scroll;
+    -webkit-overflow-scrolling: touch;
+}
+.list-group-item{
+    border: none;
+    border-bottom: 1px solid #ddd;
+ 
+}
