--- a/src/Modules/innerModule/inner/innerComponents/footer/footer.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/footer/footer.component.html
@@ -1,4 +1,6 @@
-<header>
-    <h1>Footer here</h1>
-
-</header>
+<div style="position: absolute;width: 100%;bottom: 10px;align-items: center; align-self: center;" class="text-center">
+    <a (click)="logout()" class="">
+  <span>Sign Out</span>
+  <i class="fa fa-sign-out"></i>
+</a>
+  </div>
