--- a/src/Modules/innerModule/inner/innerComponents/home/home.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/home.component.html
@@ -1,6 +1,8 @@
 <div id="home-wrapper">
         <app-header></app-header>
         <router-outlet></router-outlet>
+        
         <!-- <app-footer></app-footer> -->
 </div>
 
+<app-footer></app-footer>
