--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <button type="submit" class="btn btn-default" data-dismiss="modal" (click)="edit()">Submit</button>
+                  <button type="submit" class="btn btn-default" data-dismiss="modal" (click)="editdata()">Submit</button>
                 </div>
               </div> 
             </div>
