--- a/src/Modules/innerModule/inner/innerComponents/header/header.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
 <div class="mHeader">
         <div class="header-wrapper">
-                <div id="NameBackdrop"><h4>RS</h4></div>
-                <h4>Ram Sri</h4>
+                <div id="NameBackdrop"><h4>{{first}}{{last}}</h4></div>
+                <h4>{{username}}</h4>
               
             </div>
             <!-- <ejs-calendar></ejs-calendar> -->
