create proposal change

--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
@@ -13,7 +13,8 @@ $PrimaryColor: #212440;
     justify-content: center;
 
     @media (min-width: 600px){
-       
+      
+      width: 70%;
     }
 }
 label{ 
