--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
@@ -27,7 +27,8 @@
       <div class="modal-body inputStyle">
           <button class="text-left" data-toggle="modal" data-target="#myModal1" (click)="edit()">Edit</button>
           <button class="text-left" (click)="leadDelete()" data-dismiss="modal">Delete</button>
-          <button class="text-left">Create Proposal</button>
+          <button class="text-left" data-dismiss="modal" data-toggle="modal" data-target="#createProposal">Create Proposal</button>
+
       </div>
     </div>
   </div>  
@@ -101,3 +102,58 @@
       color="#fff"
       type="line-scale">
       <p style="font-size: 20px; color: black">Creating Client...</p></ngx-spinner> -->
+
+
+
+
+
+
+<!--  **************************** Create New Proposal ***************************************** -->
+ 
+
+<div class="container">
+        <!-- Modal -->
+        <div class="modal fade" id="createProposal" role="dialog">
+          <div class="modal-dialog">
+          
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title text-center " >Create Proposal</h4>
+              </div>
+             <div class="modal-body inputStyle">
+                  <app-pdf-create></app-pdf-create>
+    
+    
+    <div class="list-group">
+        
+            <div class="container mt-5 list-group-item mWeb">
+                    <label id="mLabel" for="websites">Websites Proposal</label>
+                    <textarea id="websites" rows="10" placeholder="Customize website proposal" #websiteInfo>
+                    </textarea> 
+            </div>
+    
+            <div class="container mt-5 list-group-item mSEO">
+                    <label id="mLabel" for="SEO">SEO Proposal</label>
+                    <textarea id="SEO" rows="10" placeholder="Customize website proposal" #SEOInfo>
+                    </textarea> 
+            </div>
+    
+            <div class="container mt-5 list-group-item mAnalytics">
+                    <label id="mLabel" for="Analytics">Analytics Proposal</label>
+                    <textarea id="Analytics" rows="10" placeholder="Customize website proposal" #analyticsInfo>
+                    </textarea> 
+            </div>
+    
+    </div>
+    
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-default" data-dismiss="modal" (click)="CreateProposal(websiteInfo.value, SEOInfo.value, analyticsInfo.value )">Submit</button>
+              </div>
+            </div> 
+          </div>
+        </div>
+      </div>
