--- a/src/Modules/innerModule/inner/innerComponents/home/home.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/home.component.scss
@@ -7,7 +7,7 @@
     margin: 0;
 
     @media(min-width: 600px){
-        display: block;
+        display: flex;
         flex-direction: row;
     }
 }
