--- a/src/Modules/innerModule/inner/innerComponents/footer/footer.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/footer/footer.component.html
@@ -1,6 +1,6 @@
-<div style="position: absolute;width: 100%;bottom: 10px;align-items: center; align-self: center;" class="text-center">
+<div style="position: absolute;width: 100%;bottom: 8px;align-items: center; align-self: center;" class="text-center">
     <a (click)="logout()" class="">
-  <span>Sign Out</span>
+  <span style="font-size:11px">Sign Out</span>
   <i class="fa fa-sign-out"></i>
 </a>
   </div>
