--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
@@ -2,134 +2,6 @@
 <!-- <ejs-calendar></ejs-calendar> -->
 <div class="content_Wrapper">
 
-<<<<<<< HEAD
-    <div class="list-group" data-toggle="modal" data-target="#leadModal">
-        <ul class="list-group-item" *ngFor="let leads of ListInfo"> 
-          <li class="ClientName" (click)="callNewModal(leads)">{{leads.client_name}}</li> 
-      
-        </ul>
-      </div>
-      
-      <!-- Universal Button CREATE BTN -->
-      <div id="btnAlign">
-      <app-button id="createBtn" btnInfo="Create" name="btnDark" data-toggle="modal" data-target="#myModal"></app-button>
-      </div>
-      
-      <!-- **************************** CRUD FUNCTIONS ON LEAD ***************************************** -->
-      <div class="container mContain">
-      <!-- CRUD Modal | EDIT | DELETE | CREATE -->
-      <div class="modal fade" id="leadModal" role="dialog">
-        <div class="modal-dialog" id="lead-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <!-- collect selected lead title -->
-              <h4 class="modal-title text-left" style="color: cornflowerblue">{{modalName}}</h4>
-            </div>
-            <div class="modal-body inputStyle">
-                <button class="text-left" data-toggle="modal" data-dismiss="modal" data-target="#myModal1" (click)="edit()">Edit</button>
-                <button class="text-left" (click)="leadDelete()" data-dismiss="modal">Delete</button>
-                <button class="text-left" data-dismiss="modal" data-toggle="modal" data-target="#createProposal">Create Proposal</button>
-      
-            </div>
-          </div>
-        </div>  
-      </div>
-      
-            </div>
-      
-      <!-- **************************** CREATE NEW LEAD ***************************************** -->
-      <div class="container">
-              <!-- Modal -->
-              <div class="modal fade" id="myModal" role="dialog">
-                <div class="modal-dialog">
-                
-                  <!-- Modal content-->
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title text-center " >Create New Lead</h4>
-                    </div>
-                    <div class="modal-body inputStyle">
-                        <label for="name">Name:</label>
-                      <input class="modalInput" type="text" name="name" [(ngModel)]="formsdataforpost.client_name" >
-                      <label for="email">Email:</label>
-                      <input class="modalInput" type="email" name="email"  [(ngModel)]="formsdataforpost.client_email">
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                      <button type="submit" class="btn btn-default" data-dismiss="modal" (click)="leadInformation()">Create</button>
-                    </div>
-                  </div> 
-                </div>
-              </div>
-            </div>
-      
-      <div class="container"> 
-      
-                <!-- Modal -->
-                <div class="modal fade" id="myModal1" role="dialog">
-                  <div class="modal-dialog">
-                  
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title text-center " >Edit Lead</h4>
-                      </div>
-                      <div class="modal-body inputStyle">
-                        <label for="name">Name:</label>
-                        <input class="modalInput" type="text" value={{selecteddata.client_name}}  [(ngModel)]="selecteddata.client_name">
-                        <label for="email">Email:</label>
-                        <input class="modalInput" type="email" value={{selecteddata.client_email}} [(ngModel)]="selecteddata.client_email">
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-default" data-dismiss="modal" (click)="editdata()">Update</button>
-                      </div>
-                    </div> 
-                  </div>
-                </div>
-            </div>
-        
-      <!--  **************************** Create New Proposal ***************************************** -->
-       
-      
-      <div class="container">
-              <!-- Modal -->
-              <div class="modal fade" id="createProposal" role="dialog">
-                <div class="modal-dialog">
-                
-                  <!-- Modal content-->
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title text-center " >Create Proposal</h4>
-                    </div>
-                   <div class="modal-body inputStyle">
-
-                      <label for="companyName" >Company Name</label>  
-                      <input type="text" name="companyName" id="cName" #companyName>
-                      <app-pdf-create></app-pdf-create>
-
-                    </div>
-
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                      <button type="submit" class="btn btn-default" data-dismiss="modal" (click)="CreateProposal(companyName.value)">Submit</button>
-                    </div>
-                  </div> 
-                </div>
-              </div>
-            </div>
-</div>
-
-<!-- Creating a state type action not sure if this is the best way to do this in Angular. -->
-
-<div class="customPKG_page_Edit" style="display: none">
-    <app-viewproposal companyName={{cName}}></app-viewproposal>
-    </div>
-
-=======
 <div class="list-group" data-toggle="modal" data-target="#leadModal">
   <ngx-spinner [fullScreen]="false" type="line-scale" size="medium">
     <p class="loading">Loading...</p>
@@ -194,8 +66,8 @@
     </div>
   </div>
 </div>
-
-<form [formGroup]="registerForm" (ngSubmit)="editdata();">
+<!-- 
+<form [formGroup]="registerForm" (ngSubmit)="editdata();"> -->
 
 <div class="container">
  
@@ -212,8 +84,8 @@
           <div class="modal-body inputStyle">
 
             <label for="name">Name:</label>
-            <input class="modalInput" type="text" formControlName="client_name"  [ngClass]="{ 'is-invalid': submitted && fval.client_name.errors }" value={{selecteddata.client_name}}
-              [(ngModel)]="selecteddata.client_name " [ngModelOptions]="{standalone: true}">
+            <input class="modalInput" type="text" 
+              [(ngModel)]="selecteddata.client_name">
 
             <label for="email">Email:</label>
             <input class="modalInput" type="email" value={{selecteddata.client_email}}
@@ -222,12 +94,11 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-default" data-dismiss="modal">Update</button>
+            <button type="submit" class="btn btn-default" data-dismiss="modal" (click)="editdata()">Update</button>
           </div>
         </div>
       </div>
     </div>
 
 </div>
-</form>
->>>>>>> 551c5f0bf6d3eec6f7de35828146c255439a06c4
+
