--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
@@ -33,7 +33,7 @@
           <button class="text-left" data-toggle="modal" data-dismiss="modal" data-target="#myModal1"
             (click)="edit()">Edit</button>
           <button class="text-left" (click)="leadDelete()" data-dismiss="modal">Delete</button>
-          <button class="text-left">Create Proposal</button>
+          <button class="text-left" data-toggle="modal" data-dismiss="modal" data-target="#createProposal" >Create Proposal</button>
         </div>
       </div>
     </div>
@@ -102,3 +102,42 @@
 
 </div>
 
+
+    <!--  Create Proposal Modal -->
+    <div class="modal fade" id="createProposal" role="dialog">
+        <div class="modal-dialog">
+  
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title text-center ">Create Proposal</h4>
+            </div>
+            <div class="modal-body inputStyle">
+              <!-- Fill Inside -->
+              <label for="companyName" >Company Name</label>  
+              <input type="text" name="companyName" id="cName" #companyName>
+              <app-pdf-create></app-pdf-create> 
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-default" data-dismiss="modal" (click)="CreateProposal(companyName.value)">Submit</button>
+
+            </div>
+          </div>
+        </div>
+      </div>
+  
+  </div>
+  
+
+
+  
+<!--  **************************** Create New Proposal ***************************************** -->
+       
+<!-- Creating a state type action not sure if this is the best way to do this in Angular. -->
+
+<div class="customPKG_page_Edit">
+<app-viewproposal companyName={{cName}}></app-viewproposal>
+</div>
+      
