--- a/src/Modules/innerModule/inner/innerComponents/home/viewproposal/viewproposal.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/viewproposal/viewproposal.component.html
@@ -1,4 +1,5 @@
 <h4 class="text-center">{{companyName}}</h4>
+<h4 class="text-center">{{cid}}</h4>
 
 <!-- multiselector -->
 <div class="selectProds">
