--- a/src/Modules/innerModule/inner/innerComponents/home/viewproposal/viewproposal.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/viewproposal/viewproposal.component.scss
@@ -1,6 +1,19 @@
 .selectProds{
     display: flex;
     justify-content: center;
-
-    
 }
+.productSelection_List_{
+    width: 90px;
+    height: 65px;
+    background-color: #AAB0C8;
+    border-radius: 10px;
+    color: white;
+    display: flex;
+    align-items: center;
+}
+.prod_alignment{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
