--- a/src/Modules/innerModule/inner/innerComponents/home/description/description.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/description/description.component.html
@@ -42,7 +42,7 @@
     </ul>
 </div>
 <div style="position: absolute;bottom:15px;right: 45%;padding-bottom: 15px;font-size: 20px;">
-    <a href="#" class="next" (click)="next()" >Next</a>
+    <a class="next" (click)="nextpage()" >Next</a>
 </div>
 </div>
 <br>
