--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.html
@@ -229,12 +229,12 @@
     </ng-multiselect-dropdown>
   </div>
 
-  <button
-  type="submit"
-  class="btn btn-default"
-  (click)="Verify()"
->
-  Submit
-</button>
-  <a class="small" (click)="tryThis()">Back</a>
+  <div style="position: absolute;bottom:15px;right: 37%;padding-bottom: 15px;font-size: 20px;border-bottom: 2px;">
+    <a class="next" (click)="Verify()" >Next</a>
+</div>
+<div style="position: absolute;bottom:15px;right: 52%;padding-bottom: 15px;font-size: 20px;">
+    <a class="next" (click)="back()" >Back</a>
+</div>
+
+
 </div>
