--- a/src/Modules/innerModule/inner/innerComponents/header/header.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/header/header.component.html
@@ -11,6 +11,8 @@
                {{dateTime | date: 'd'}}
                
             </div>
+
+            <weather-widget [settings]="settings"></weather-widget>
             
 </div>
 
