--- a/src/Modules/innerModule/inner/innerComponents/home/investment/investment.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/investment/investment.component.html
@@ -7,7 +7,7 @@
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
-
+  <p ng-bind-html="demo.body|lineBreak"></p>
   <div style="position: absolute;bottom:15px;right: 45%;padding-bottom: 15px;font-size: 20px;">
         <a class="next" (click)="nextpage()" >SEND</a>
     </div>
