--- a/src/Modules/login/login.component.scss
+++ b/src/Modules/login/login.component.scss
@@ -12,7 +12,7 @@ background: linear-gradient(
     rgba($PrimaryColor, 0.82), 
     rgba($PrimaryColor, 0.82)
 ),
-url("src/assets/backgroundWallpaper.jpg") no-repeat;
+url("../../assets/backgroundWallpaper.jpg") no-repeat;
 background-size: cover;
 }
 #googleLogo{ 
