--- a/src/Modules/innerModule/inner/innerComponents/home/investment/investment.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/investment/investment.component.html
@@ -8,7 +8,7 @@
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
   <p ng-bind-html="demo.body|lineBreak"></p>
-  <div style="position: absolute;bottom:15px;right: 45%;padding-bottom: 15px;font-size: 20px;">
+  <div class="send_btn" style="position: absolute;bottom:15px;right: 45%;padding-bottom: 15px;font-size: 20px;">
         <a class="next" (click)="nextpage()" >SEND</a>
     </div>
 </div>
