--- a/src/Modules/innerModule/inner/innerComponents/footer/footer.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div style="position: absolute;width: 100%;bottom: 8px;align-items: center; align-self: center;" class="text-center">
+<div style="position: absolute;width: 100%;bottom: 8px;align-items: center; align-self: center;" class="text-center signOut">
     <a (click)="logout()" class="">
   <span style="font-size:11px">Sign Out</span>
   
