--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
@@ -39,12 +39,33 @@ label{
     display: flex;
     flex-direction: row;
     width: 100%;
-
     app-list-btn{
         position: absolute;
         right: 40px;
     }
 }
+.list-group-item{ 
+    border-bottom: 1px solid rgba(128, 128, 128, 0.071);
+    &:hover{ 
+        cursor: pointer;
+    }
+}
+.crudBtns{
+    background: none;
+    border: none; 
+    &:hover{ 
+        cursor: pointer; 
+        color: cornflowerblue;
+    }
+}
+.list-group{
+    max-height: 100vh !important;
+    height: 100vh !important;
+    max-width: 100vw !important;
+    width: 100vw !important;
+    margin-bottom: 0;
+}
+
 #lead-dialog{ 
     width: 171px;
     position: absolute;
@@ -69,11 +90,10 @@ width: 100vw;
         border: 1px solid #F2F3F5;
         border-radius: 10px;
     }
-
 }
 #cName{
     margin-bottom: 6px;
-    border-radius: 25px;
+    border-radius: 4px;
     border: 1px solid grey;
 }
 .loading{
@@ -82,4 +102,27 @@ width: 100vw;
   }
 .customPKG_page_Edit{
     display: none;
+}
+@media(min-width: 600px){ 
+.formNav{
+     bottom: 50px !important;  
+    }
+    .next{ 
+        right:20% !important;
+        a{
+            &:hover{
+                text-decoration: none;
+                cursor: pointer;
+            }
+        }
+    }
+    .back{ 
+        right:37% !important;
+        a{
+            &:hover{
+                text-decoration: none;
+                cursor: pointer;
+            }
+        }
+    }
 }
