--- a/src/Modules/innerModule/inner/innerComponents/home/description/description.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/description/description.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div class="container row">
+<div class="container row desc_Container">
     <form (submit)="Add(product.value,amount.value)">
         <div class="col-xs-5">
             <label>Product</label>
@@ -41,10 +41,10 @@
         </li>
     </ul>
 </div>
-<div style="position: absolute;bottom:15px;right: 37%;padding-bottom: 15px;font-size: 20px;border-bottom: 2px;">
+<div class="formNav next" style="position: absolute;bottom:15px;right: 37%;padding-bottom: 15px;font-size: 20px;border-bottom: 2px;">
     <a class="next" (click)="nextpage()" >Next</a>
 </div>
-<div style="position: absolute;bottom:15px;right: 52%;padding-bottom: 15px;font-size: 20px;">
+<div class="formNav back" style="position: absolute;bottom:15px;right: 52%;padding-bottom: 15px;font-size: 20px;">
     <a class="next" (click)="back()" >Back</a>
 </div>
 </div>
