--- a/src/Modules/innerModule/inner/innerComponents/home/investment/investment.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/investment/investment.component.scss
@@ -1,1 +1,11 @@
 // @import '../../../../../../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
+
+@media (min-width: 600px) {
+  .form-group {
+    width: 65vw !important;
+    padding: 30px !important;
+  }
+  .send_btn {
+    right: 30% !important;
+  }
+}
