Changes made to the Thank you page

--- a/src/Modules/innerModule/inner/innerComponents/home/thankyou/thankyou.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/thankyou/thankyou.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="inner cover container">
+<div class="inner cover container reform">
     <h1 class="cover-heading" style="text-align: center;">{{greting}}</h1>
     <div  class="lead" *ngIf = "success; else elseBlock">{{success}}</div >
     <ng-template class="lead" #elseBlock>Proposal not created Error: {{ErrorMessage}}</ng-template>
